# ASBR_integration-

./: README.md
asbr_package/asbr_test_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh  spawn_shell.bash
asbr_package/asbr_test_ws/install/asbr_description/share/asbr_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
asbr_package/asbr_test_ws/install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.sh  package.dsv  package.sh
asbr_package/asbr_test_ws/install/realsense2_description/share/realsense2_description/: local_setup.sh  package.dsv  package.sh
asbr_package/asbr_test_ws/install/robotiq_2f_85_gripper_visualization/share/robotiq_2f_85_gripper_visualization/: local_setup.sh  package.dsv  package.sh  package.xml
asbr_package/asbr_test_ws/install/robotiq_description/share/robotiq_description/: local_setup.sh  package.dsv  package.sh  package.xml
asbr_package/asbr_test_ws/install/ur5e_cobot_bringup/share/ur5e_cobot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
asbr_package/asbr_test_ws/log/: latest_build  latest_list
asbr_package/asbr_test_ws/src/asbr_description/: CMakeLists.txt  package.xml
asbr_package/asbr_test_ws/src/asbr_description/launch/: display_asbr_ur5e.launch.xml  view_ur.launch.py
asbr_package/asbr_test_ws/src/asbr_description/rviz/: asbr_UR5e.rviz  asbr_config.rviz  asbr_ur5e_config.rviz
asbr_package/asbr_test_ws/src/asbr_description/urdf/: asbr.urdf.xacro  robot_gripper_adapter.xacro  ur5e_ros2_control.xacro
asbr_package/asbr_test_ws/src/robotiq_description/: CMakeLists.txt  package.xml
asbr_package/asbr_test_ws/src/robotiq_description/robotiq_2f_85_gripper_visualization/: CMakeLists.txt  package.xml
asbr_package/asbr_test_ws/src/ur5e_cobot_bringup/: CMakeLists.txt  package.xml
asbr_package/asbr_test_ws/src/ur5e_cobot_bringup/launch/: ur5e_cobot_gazebo.launch.xml
(+17 files in other folders)
